--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: Le Wagon Middleman boilerplate
 ---
 
@@ -8,3 +8,86 @@ title: Le Wagon Middleman boilerplate
     <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
   </p><!-- .doc -->
 </div><!-- .welcome -->
+ -->
+<div class='banner' style="background-image: url('http://unsplash.it/1000/700/?image=0')">
+      <div class='banner-filter'>
+      </div>
+      <div class="banner-content">
+        <h3>Startup tools</h3>
+        <h4>Very cool stuff, usefull and smart</h4>
+        <a class='btn btn-primary banner-btn'>GET IT</a>
+      </div>
+    </div>
+      <!-- Cards -->
+    <div class='container-fluid'>
+      <div class='row'>
+        <div class='col-xs-12 col-sm-6 col-md-3'>
+          <h4>
+            <%= image_tag "chat.png" %>
+            Discuss best tools
+          </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sequi sed, odit tenetur? Necessitatibus ad nulla deleniti quis vel facere hic illum omnis expedita beatae aliquam quibusdam asperiores laborum, magni.
+            </p>
+        </div>
+        <div class='col-xs-12 col-sm-6 col-md-3'>
+          <h4>
+            <%= image_tag "mobile.png" %>
+            Always in sync</h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea officia beatae, repellendus eveniet alias vel laboriosam, necessitatibus error cum asperiores facere aliquam consectetur ad impedit molestiae, harum? Vel, quidem, sit.
+            </p>
+        </div>
+        <div class='col-xs-12 col-sm-6 col-md-3'>
+          <h4>
+            <%= image_tag "search.png" %>
+            Powerful search
+          </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis optio adipisci minus vero voluptatum soluta corporis alias ut commodi non quaerat quasi reprehenderit sit dolore nulla qui cum explicabo, possimus.
+            </p>
+        </div>
+        <div class='col-xs-12 col-sm-6 col-md-3'>
+          <h4>
+            <%= image_tag "heart.png" %>
+            Share the love
+          </h4>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab cumque delectus, reiciendis fugit molestiae totam obcaecati exercitationem illum amet, recusandae, odio est. Repudiandae sapiente provident, sint reprehenderit necessitatibus, magni.
+            </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Newsletter -->
+
+    <!-- Map -->
+    <div id="map" style="width: 100%; height: 400px;"></div>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+    <script type="text/javascript">
+    var myLatlng = new google.maps.LatLng(48.852937,2.364178);
+
+    var myOptions = {
+      zoom: 16,
+      center: myLatlng,
+      scrollwheel: false,
+      mapTypeId: google.maps.MapTypeId.ROADMAP,
+      styles: [] // TODO: replace [] by array from https://snazzymaps.com/
+    };
+
+    var map = new google.maps.Map(document.getElementById('map'), myOptions);
+    var marker = new google.maps.Marker({
+      position: myLatlng,
+      map: map,
+      title: "You are here!"
+    });
+    </script>
+
+    <!-- Footer -->
+
+    <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>-->
+  </body>
