finish content migration in Middleman

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,14 +1,14 @@
-<!-- ---
-title: Le Wagon Middleman boilerplate
 ---
-
+title: My Demo
+---
+<!--
 <div class="welcome text-center padded">
   <h1>Middleman is Watching</h1>
   <p class="doc">
     <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
   </p><!-- .doc -->
 </div><!-- .welcome -->
- -->
+
 <div class='banner' style="background-image: url('http://unsplash.it/1000/700/?image=0')">
       <div class='banner-filter'>
       </div>
@@ -22,39 +22,49 @@ title: Le Wagon Middleman boilerplate
     <div class='container-fluid'>
       <div class='row'>
         <div class='col-xs-12 col-sm-6 col-md-3'>
-          <h4>
-            <%= image_tag "chat.png" %>
-            Discuss best tools
-          </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sequi sed, odit tenetur? Necessitatibus ad nulla deleniti quis vel facere hic illum omnis expedita beatae aliquam quibusdam asperiores laborum, magni.
-            </p>
+          <div class='card-white'>
+            <h1></h1> <!--pour aligner les écritures -->
+            <h4>
+              <%= image_tag "chat.png", class: 'img-size txt-justify' %>
+              Discuss best tools
+            </h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores sequi sed, odit tenetur? Necessitatibus ad nulla deleniti quis vel facere hic illum omnis expedita beatae aliquam quibusdam asperiores laborum, magni.
+              </p>
+          </div>
         </div>
         <div class='col-xs-12 col-sm-6 col-md-3'>
-          <h4>
-            <%= image_tag "mobile.png" %>
-            Always in sync</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea officia beatae, repellendus eveniet alias vel laboriosam, necessitatibus error cum asperiores facere aliquam consectetur ad impedit molestiae, harum? Vel, quidem, sit.
-            </p>
+          <div class='card-white'>
+            <h4>
+              <%= image_tag "mobile.png", class: 'img-size-special txt-justify' %>
+              Always in sync
+            </h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea officia beatae, repellendus eveniet alias vel laboriosam, necessitatibus error cum asperiores facere aliquam consectetur ad impedit molestiae, harum? Vel, quidem, sit.
+              </p>
+          </div>
         </div>
         <div class='col-xs-12 col-sm-6 col-md-3'>
-          <h4>
-            <%= image_tag "search.png" %>
-            Powerful search
-          </h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis optio adipisci minus vero voluptatum soluta corporis alias ut commodi non quaerat quasi reprehenderit sit dolore nulla qui cum explicabo, possimus.
-            </p>
+          <div class='card-white'>
+            <h4>
+              <%= image_tag "search.png", class: 'img-size txt-justify' %>
+              Powerful search
+            </h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis optio adipisci minus vero voluptatum soluta corporis alias ut commodi non quaerat quasi reprehenderit sit dolore nulla qui cum explicabo, possimus.
+              </p>
+          </div>
         </div>
         <div class='col-xs-12 col-sm-6 col-md-3'>
+          <div class='card-white'>
           <h4>
-            <%= image_tag "heart.png" %>
+            <%= image_tag "heart.png", class: 'img-size' %>
             Share the love
           </h4>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure ab cumque delectus, reiciendis fugit molestiae totam obcaecati exercitationem illum amet, recusandae, odio est. Repudiandae sapiente provident, sint reprehenderit necessitatibus, magni.
             </p>
+          </div>
         </div>
       </div>
     </div>
