--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -9,6 +9,7 @@ $body-bg:                 white;
 $font-size-base:          $base-size;
 $line-height-base:        $base-height;
 $headings-font-family:    $header-font;
+$grid-gutter-width:       10px;
 
 // Semantic color scheme
 $brand-primary:   $blue;
